--- a/app/assets/stylesheets/api/review.scss
+++ b/app/assets/stylesheets/api/review.scss
@@ -15,3 +15,8 @@ input[type="radio"]{
     border: 1px solid black;
 
 }
+
+.review-nickname-p{
+    font-size: 22px;
+    color: #010101;
+}
